objects/Opportunity.object
<CustomObject><businessProcesses>
        <fullName>Donation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Posted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>Faculty Contracts</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Sent</fullName>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>Grant</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Application Submitted</fullName>
        </values>
        <values>
            <fullName>Awarded</fullName>
        </values>
        <values>
            <fullName>LOI Submitted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>Invoices</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Sent</fullName>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>OE Registrations</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Posted</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>OEL Project Proposals</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Faculty Accepted</fullName>
        </values>
        <values>
            <fullName>Faculty Declined</fullName>
        </values>
        <values>
            <fullName>In process</fullName>
        </values>
        <values>
            <fullName>OEL Project Fully Approved</fullName>
        </values>
        <values>
            <fullName>Partner Org Accepted</fullName>
        </values>
        <values>
            <fullName>Partner Org Declined</fullName>
        </values>
        <values>
            <fullName>Pending Approval</fullName>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>SP Contracts</fullName>
        <description>Strategic Partnership Contracts</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
    </businessProcesses><businessProcesses>
        <fullName>Std Sales</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Identified</fullName>
        </values>
        <values>
            <fullName>Negotiations Started</fullName>
        </values>
        <values>
            <fullName>Proposal Submitted</fullName>
        </values>
        <values>
            <fullName>Prospect Qualified</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Verbal Agreement</fullName>
        </values>
    </businessProcesses><fields>
        <fullName>ACF_Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Academic Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Alumni_Event_Date__c</fullName>
        <label>Alumni Event Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Alumni_Event_Occurred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alumni Event_Occurred</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Alumni_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alumni Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.Type</field>
                <operation>equals</operation>
                <value>Alumni Event</value>
            </filterItems>
            <infoMessage>Events with Type = Alumni Event</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities (Alumni Event)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Assignment__c</fullName>
        <label>Assignment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ACF_August_December_GCTT_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>August - December GCTT Projects</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Babson_Alum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Babson Alum</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Babson_CCD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Babson Center for Career Development</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Babson_Faculty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Babson Faculty</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Babson_Staff_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Babson Staff Member</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Babson_s_OEL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Babson's Office of Experiential Learning</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Benefits_Fair_Date__c</fullName>
        <label>Benefits Fair Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Benefits_Fair_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefits Fair Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.Type</field>
                <operation>equals</operation>
                <value>Benefits Fair</value>
            </filterItems>
            <infoMessage>Events with Type = Benefits Fair</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities (Benefits Fair Event)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Benefits_Fair_Occurred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefits Fair Occurred</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Bill_to_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.hed__Primary_Organization__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoice (Bill To Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Check__c</fullName>
        <label>Check#</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Corporate_Info_Session_1_Date__c</fullName>
        <label>Corporate Info Session 1 Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Corporate_Info_Session_1_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Info Session 1 Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.Type</field>
                <operation>equals</operation>
                <value>Corporate Info Session</value>
            </filterItems>
            <infoMessage>Events with Type = Corporate Info Session</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities (Corporate Info Session 1 Event)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Corporate_Info_Session_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Info Session 1</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Corporate_Info_Session_2_Date__c</fullName>
        <label>Corporate Info Session 2 Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Corporate_Info_Session_2_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Info Session 2 Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.Type</field>
                <operation>equals</operation>
                <value>Corporate Info Session</value>
            </filterItems>
            <infoMessage>Events with Type = Corporate Info Session</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities (Corporate Info Session 2 Event)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Corporate_Info_Session_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Info Session 2</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Current_Babson_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Babson Student</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_EE_Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_EE_Do_Not_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Process</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_EE_Payroll_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If payroll record exists for this FA, then Faculty cannot be updated</description>
        <label>Payroll Exists</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_EE_Pre_Work_Due_Date__c</fullName>
        <label>Pre Work Due Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_EE_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_EE_Related_Faculty_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Faculty Agreement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>BEE Faculty Agreements</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Addtl Faculty Expenses)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_EE_Related_Sales_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Sales Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Standard Sales</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Faculty Expenses)</relationshipLabel>
        <relationshipName>Opportunities_del</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_EE_Stage_Reason_del__c</fullName>
        <inlineHelpText>Reason for change in Stage</inlineHelpText>
        <label>Stage Reason</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_EE_Work_Due_Date__c</fullName>
        <label>Work Due Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Email_Invoice__c</fullName>
        <label>Email Invoice?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Faculty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Faculty</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Faculty Agreements</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Former_EL_Partner_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Former Experiential Learning Partner Org</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_GL_Account_Historical__c</fullName>
        <inlineHelpText>Hold the GL Account for invoices not tied to an Offering</inlineHelpText>
        <label>GL Account Historical</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Historical_Invoice__c</fullName>
        <description>Historical invoice # from the Pivotal data migration.</description>
        <inlineHelpText>Historical invoice # from the Pivotal data migration.</inlineHelpText>
        <label>Historical Invoice #</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Hold_Primary_PM__c</fullName>
        <description>Populated by Form Assembly to pass to the Project record when converted. (Also stored as Contact Role for purposes of working the proposal.)</description>
        <label>Hold Primary PM</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Hold_Sr_PM__c</fullName>
        <description>Populated by Form Assembly to pass to the Project record when converted. (Also stored as Contact Role for purposes of working the proposal.)</description>
        <label>Hold Sr. PM</label>
        <length>80</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Invoice_num__c</fullName>
        <formula>ACF_Invoice_pt1__c + "-" + Invoice_pt2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FY+GL+ActivityCode+###</inlineHelpText>
        <label>Invoice#</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Invoice_pt1__c</fullName>
        <formula>ACF_Offering__r.ACF_GL_Account__r.ACF_Fiscal_Year__c + "-" + ACF_Offering__r.ACF_GL_Account__r.ACF_Activity_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice# pt1</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_May_August_GCTT_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>May - August GCTT Projects</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Migrated_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Migrated Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Migrated_Modified_Date__c</fullName>
        <label>Migrated Modified Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>ACF_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_OEL_Additional_information__c</fullName>
        <inlineHelpText>Additional information that might be useful during review</inlineHelpText>
        <label>Additional information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ACF_OEL_Advisory_Services_Consulting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advisory Services/Consulting</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_OEL_Analytics_Web_Mobile_MktResearch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Analytics - Web/Mobile/Market Research</inlineHelpText>
        <label>Analytics - Web/Mobile/Mkt Research</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_OEL_Challenge__c</fullName>
        <inlineHelpText>Describe the challenge you are presenting to our Graduate consulting team</inlineHelpText>
        <label>Challenge</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ACF_OEL_Deliverables__c</fullName>
        <inlineHelpText>What deliverables would are expected?</inlineHelpText>
        <label>Deliverables</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ACF_OEL_Finance_Accounting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance &amp; Accounting</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_OEL_HR_Org_Mgt_Change_Mgt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Human Resource/Organizational Management/Change Management</inlineHelpText>
        <label>HR / Org Mgt / Change Mgt</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_OEL_Jan_March_GCTT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>January - March GCTT (Technology Strategy Projects)</inlineHelpText>
        <label>Jan - March GCTT Projects</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_OEL_January_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>January Projects (14, 9 and 7 Weeks)</inlineHelpText>
        <label>January Projects</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_OEL_March_May_GCTT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>March - May GCTT Projects (Technology Strategy Projects)</inlineHelpText>
        <label>March - May GCTT Projects</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_OEL_March_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>March 2017 Projects (7 Weeks)</inlineHelpText>
        <label>March Projects</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_OEL_May_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>May Projects (7 Weeks)</inlineHelpText>
        <label>May Projects</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_OEL_Operations_Logistics_Supply__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Operations/Logistics/Supply Chain</inlineHelpText>
        <label>Ops/Logistics/Supply Chain</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_OEL_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_OEL_Project_Year__c</fullName>
        <inlineHelpText>2017, 2018, 2019, etc.</inlineHelpText>
        <label>Project Year</label>
        <length>4</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_OEL_Referral_Name_Student__c</fullName>
        <label>Referral Name Student</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_OEL_Sales_Business_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales/Business Development</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_OEL_Sales_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales &amp; Marketing</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_OEL_Strategy_Bus_Planning_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Strategy/Business Planning &amp; Forecasting</inlineHelpText>
        <label>Strategy/Business Planning &amp; Forecasting</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_OEL_challenge_impt_to_Org__c</fullName>
        <inlineHelpText>How is the challenge important to the organization? How will project results/findings being used?</inlineHelpText>
        <label>Challenge importance to Organization</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ACF_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Exec Ed program offering related to this contract</inlineHelpText>
        <label>Offering</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>BEE Program Offering</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunity</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Other_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Referral</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_PO__c</fullName>
        <label>PO#</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Payment</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Payment_Status__c</fullName>
        <label>Payment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Due on Receipt</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Pivotal_ID__c</fullName>
        <externalId>true</externalId>
        <label>Pivotal ID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>ACF_Referral_Name_Faculty__c</fullName>
        <label>Referral Name Faculty</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Referral_Name_Other__c</fullName>
        <label>Referral Name Other</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Referral_Name_Staff__c</fullName>
        <label>Referral Name Staff</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Semesters_Covered__c</fullName>
        <label>Semesters Covered</label>
        <picklist>
            <picklistValues>
                <fullName>Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>ACF_September_Projects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>September Projects</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Social_Media__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Media</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ACF_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Tabling_Event_Date__c</fullName>
        <label>Tabling Event Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Tabling_Event_Occurred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tabling Event Occurred</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Tabling_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tabling Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.Type</field>
                <operation>equals</operation>
                <value>Tabling Event</value>
            </filterItems>
            <infoMessage>Events with Type = Tabling Event</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities (Tabling Event)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Taste_of_Babson_Event_Date__c</fullName>
        <label>Taste of Babson Event Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Taste_of_Babson_Event_Occurred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taste of Babson Event Occurred</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Taste_of_Babson_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Taste of Babson Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.Type</field>
                <operation>equals</operation>
                <value>Taste of Babson</value>
            </filterItems>
            <infoMessage>Events with Type = Taste of Babson</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities (Taste of Babson Event)</relationshipLabel>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_View__c</fullName>
        <formula>HYPERLINK("/"+Id, "View")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Faculty_Director__c</fullName>
        <formula>ACF_Offering__r.ACF_Faculty_Director__r.FirstName &amp;" "&amp; ACF_Offering__r.ACF_Faculty_Director__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Faculty Director</label>
        <type>Text</type>
    </fields><fields>
        <fullName>GL_Acct_Num__c</fullName>
        <formula>ACF_Offering__r.ACF_GL_Account__r.ACF_GL_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>GL Account of the Offering</inlineHelpText>
        <label>GL Acct#</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Invoice_pt2__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Invoice# pt2</label>
        <type>AutoNumber</type>
    </fields><fields>
        <fullName>Program_Coordinator__c</fullName>
        <formula>ACF_Offering__r.ACF_Program_Coordinator__r.FirstName &amp;" "&amp; ACF_Offering__r.ACF_Program_Coordinator__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Coordinator</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Program_Manager__c</fullName>
        <formula>ACF_Offering__r.ACF_Program_Manager__r.FirstName &amp;" "&amp; ACF_Offering__r.ACF_Program_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Manager</label>
        <type>Text</type>
    </fields><fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><externalSharingModel>Private</externalSharingModel><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>true</recordTypeTrackHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>AllDonations</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Donation</value>
        </filters>
        <label>All Donations</label>
    </listViews><listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews><listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>    </validationRules></CustomObject>